--- a/Minecraft_QQ/SetWindow/Window1.xaml
+++ b/Minecraft_QQ/SetWindow/Window1.xaml
@@ -1,12 +1,11 @@
 ﻿<Window
-    x:Class="Minecraft_QQ.Form.Window1"
+    x:Class="Minecraft_QQ.SetWindow.Window1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-        Title="Minecraft_QQ" Height="450" Width="759.437" Icon="icon.ico" ResizeMode="NoResize">
+        Title="Minecraft_QQ" Height="450" Width="760" Icon="/Minecraft_QQ;component/img/icon.ico" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -17,7 +16,7 @@
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
-        <Image Source="Minecraft_QQ.jpg">
+        <Image Source="/Minecraft_QQ;component/img/Minecraft_QQ.jpg">
             <Image.Effect>
                 <BlurEffect Radius="10"/>
             </Image.Effect>
@@ -29,10 +28,10 @@
                               Name="QQList">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="群号" Width="120" />
-                                <GridViewColumn Header="允许使用指令" Width="130"/>
-                                <GridViewColumn Header="开启服务器对话" Width="150"/>
-                                <GridViewColumn Header="主群日志群" Width="120"/>
+                                <GridViewColumn Header="群号" Width="120" DisplayMemberBinding="{Binding 群号}"/>
+                                <GridViewColumn Header="允许使用指令" Width="130" DisplayMemberBinding="{Binding 启用命令}"/>
+                                <GridViewColumn Header="开启服务器对话" Width="150" DisplayMemberBinding="{Binding 开启对话}"/>
+                                <GridViewColumn Header="主群日志群" Width="120" DisplayMemberBinding="{Binding 主群}"/>
                             </GridView>
                         </ListView.View>
                         <ListView.ContextMenu>
@@ -42,7 +41,8 @@
                             </ContextMenu>
                         </ListView.ContextMenu>
                     </ListView>
-                    <Button Margin ="592,332,10,10" Content="添加" Style="{DynamicResource Button}" FontSize="20"/>
+                    <Button Margin ="593,332,10,10" Content="添加" Style="{DynamicResource Button}" 
+                            FontSize="20" Click="Button_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="服务器设置" Background="Transparent" Style="{DynamicResource TabItem}">
