--- a/Minecraft_QQ/SetWindow/Window1.xaml
+++ b/Minecraft_QQ/SetWindow/Window1.xaml
@@ -1,5 +1,4 @@
-﻿<controls:MetroWindow
-    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+﻿<Window
     x:Class="Minecraft_QQ.SetWindow.Window1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,12 +9,10 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml"/>
                 <ResourceDictionary Source="Style/Button.xaml"/>
+                <ResourceDictionary Source="Style/Label.xaml"/>
                 <ResourceDictionary Source="Style/ListView.xaml"/>
+                <ResourceDictionary Source="Style/TextBox.xaml"/>
                 <ResourceDictionary Source="Style/TabControl.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -51,14 +48,24 @@
             </TabItem>
             <TabItem Header="服务器设置" Background="Transparent" Style="{DynamicResource TabItem}">
                 <Grid>
+                    <Label Content="地址" Style="{DynamicResource Label}" Margin="10,10,684,341"/>
+                    <TextBox Name="IP" TextWrapping="Wrap" Margin="55,10,519,341" Style="{DynamicResource TextBox}" FontSize="16"/>
+                    <Button x:Name="Local" Content="本地用" Margin="10,45,644,311" IsDefault="True" Style="{DynamicResource Button}"
+                            FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click_1"/>
+                    <Button x:Name="Out" Content="映射用" Margin="95,45,559,311" IsDefault="True" Style="{DynamicResource Button}"
+                            FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click_3"/>
+                    <Label Content="端口" Style="{DynamicResource Label}" Margin="10,75,684,276"/>
+                    <TextBox x:Name="Port" TextWrapping="Wrap" Margin="55,75,519,276" Style="{DynamicResource TextBox}" FontSize="16"/>
+                    <Button x:Name="SocketRE" Content="重启端口" Margin="10,346,644,10" IsDefault="True" Style="{DynamicResource Button}"
+                        FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click_2"/>
+                    <Label Content="状态：" Style="{DynamicResource Label}" Margin="10,110,672,241"/>
+                    <Label Name="State" Content="未知" Style="{DynamicResource Label}" Margin="62,110,519,241"/>
                     <ListView Margin="220,10,10,10" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
                               Name="ServerList">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="群号" Width="120" DisplayMemberBinding="{Binding 群号}"/>
-                                <GridViewColumn Header="允许使用指令" Width="130" DisplayMemberBinding="{Binding 启用命令}"/>
-                                <GridViewColumn Header="开启服务器对话" Width="150" DisplayMemberBinding="{Binding 开启对话}"/>
-                                <GridViewColumn Header="主群日志群" Width="120" DisplayMemberBinding="{Binding 主群}"/>
+                                <GridViewColumn Header="服务器名字" Width="150" DisplayMemberBinding="{Binding Name}"/>
+                                <GridViewColumn Header="连接地址" Width="250" DisplayMemberBinding="{Binding Addr}"/>
                             </GridView>
                         </ListView.View>
                         <ListView.ContextMenu>
@@ -69,6 +76,8 @@
                             </ContextMenu>
                         </ListView.ContextMenu>
                     </ListView>
+                    <Button x:Name="SocketRE_Copy" Content="关闭端口" Margin="95,346,559,10" IsDefault="True" Style="{DynamicResource Button}"
+                        FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="SocketRE_Copy_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="指令设置" Background="Transparent" Style="{DynamicResource TabItem}">
@@ -93,8 +102,8 @@
             </TabItem>
         </TabControl>
         <Button Content="保存" Margin="660,5,10,391" IsDefault="True" Style="{DynamicResource Button}"
-                    FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="launchButton_Click"/>
+                    FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Click"/>
         <Button Content="重载" Margin="585,5,85,391" IsDefault="True" Style="{DynamicResource Button}"
-                    FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5"/>
+                    FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click"/>
     </Grid>
-</controls:MetroWindow>
+</Window>
