--- a/Minecraft_QQ/SetWindow/Style/Button.xaml
+++ b/Minecraft_QQ/SetWindow/Style/Button.xaml
@@ -1,18 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Button" TargetType="Button">
+    <Style x:Key="Button" TargetType="{x:Type Button}">
         <Setter Property="Foreground" Value="#FFFFFFFF"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <!--定义圆角外边框-->
-                    <Border Name="gridborder" BorderBrush="#007ACC" BorderThickness="1" CornerRadius="3">
-                        <Border.Background>
-                            <!--定义圆角外边框背景-->
-                            <LinearGradientBrush StartPoint="0 1" EndPoint="0 0">
-                                <GradientStop Color="#AAFF0000" Offset="0.2"/>
-                            </LinearGradientBrush>
-                        </Border.Background>
+                    <Border Name="gridborder" BorderThickness="1" CornerRadius="3">
                         <TextBlock x:Name="data" Text="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                     <ControlTemplate.Triggers>
