--- a/Minecraft_QQ/SetWindow/Style/CheckBox.xaml
+++ b/Minecraft_QQ/SetWindow/Style/CheckBox.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Check" TargetType="CheckBox">
+    <Style x:Key="Check" TargetType="{x:Type CheckBox}">
         <Setter Property="Background" Value="#FFFFFFFF"/>
         <Setter Property="ScrollViewer.Background" Value="#FFFFFFFF"/>
         <Setter Property="Template">
@@ -11,20 +11,20 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <Grid Height="{TemplateBinding Height}" Width="{TemplateBinding Height}">
-                            <Rectangle x:Name="CheckBoxRectangle" Fill="#CC5EBDD3" Opacity="0.3" Width="15" Height="15"/>
-                            <Rectangle x:Name="CheckBoxRectangleOut" Stroke="#CC5EBDD3" StrokeThickness="1" Width="15" Height="15"/>
+                        <Grid Height="{TemplateBinding Height}">
+                            <Rectangle x:Name="CheckBoxRectangle" Fill="#225EBDD3" Height="{TemplateBinding FontSize}" Width="{TemplateBinding FontSize}" Opacity="0.3" Margin="0,2,0,0" />
+                            <Rectangle x:Name="CheckBoxRectangleOut" Stroke="#CC5EBDD3" Height="{TemplateBinding FontSize}" Width="{TemplateBinding FontSize}" StrokeThickness="1" Margin="0,2,0,0"/>
                         </Grid>
                         <TextBlock Grid.Column="1" Text="{Binding Content,RelativeSource={RelativeSource TemplatedParent}}" 
-                                   Background="#00898989" Foreground="Black" VerticalAlignment="Center" Margin="2,0,0,0"/>
+                                   Foreground="{Binding Foreground,RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" Margin="2,-1,0,0"/>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="true">
-                            <Setter TargetName="CheckBoxRectangle" Property="Fill" Value="#CC5EBDD3"/>
+                            <Setter TargetName="CheckBoxRectangle" Property="Fill" Value="#FF5EBDD3"/>
                             <Setter TargetName="CheckBoxRectangle" Property="Opacity" Value="1"/>
                         </Trigger>
                         <Trigger Property="IsChecked" Value="false">
-                            <Setter TargetName="CheckBoxRectangle" Property="Fill" Value="#445EBDD3"/>
+                            <Setter TargetName="CheckBoxRectangle" Property="Fill" Value="#225EBDD3"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
