--- a/Minecraft_QQ/SetWindow/Style/ComboBox.xaml
+++ b/Minecraft_QQ/SetWindow/Style/ComboBox.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="ToggleButton" x:Key="ComboxStyleBtn">
+    <Style TargetType="{x:Type ToggleButton}" x:Key="ComboxStyleBtn">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
