--- a/Minecraft_QQ/SetWindow/Style/Label.xaml
+++ b/Minecraft_QQ/SetWindow/Style/Label.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Label" TargetType="Label">
+    <Style x:Key="Label" TargetType="{x:Type Label}">
         <Setter Property="Background" Value="#44898989"/>
         <Setter Property="Foreground" Value="White"/>
     </Style>
