--- a/Minecraft_QQ/SetWindow/Window1.xaml
+++ b/Minecraft_QQ/SetWindow/Window1.xaml
@@ -5,24 +5,26 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-        Title="Minecraft_QQ" Height="450" Width="746" Icon="/Minecraft_QQ;component/img/icon.ico" ResizeMode="NoResize">
+        Title="Minecraft_QQ" Height="450" Width="750" Icon="/Minecraft_QQ;component/img/icon.ico" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Style/Button.xaml"/>
+                <ResourceDictionary Source="Style/CheckBox.xaml"/>
+                <ResourceDictionary Source="Style/ContextMenu.xaml"/>
                 <ResourceDictionary Source="Style/Label.xaml"/>
                 <ResourceDictionary Source="Style/ListView.xaml"/>
                 <ResourceDictionary Source="Style/TextBox.xaml"/>
                 <ResourceDictionary Source="Style/TabControl.xaml"/>
+                <ResourceDictionary Source="Style/GroupBox.xaml"/>
+                <ResourceDictionary Source="Style/RadioButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
+    <Window.Background>
+        <ImageBrush Stretch="Uniform" ImageSource="/Minecraft_QQ;component/img/Minecraft_QQ.jpg"/>
+    </Window.Background>
     <Grid>
-        <Image Source="/Minecraft_QQ;component/img/Minecraft_QQ.jpg">
-            <Image.Effect>
-                <BlurEffect Radius="8"/>
-            </Image.Effect>
-        </Image>
         <TabControl Margin="0,0,0,0" Background="#00000000">
             <TabItem Header="群设置" Background="Transparent" Style="{DynamicResource TabItem}" >
                 <Grid>
@@ -48,19 +50,33 @@
             </TabItem>
             <TabItem Header="服务器设置" Background="Transparent" Style="{DynamicResource TabItem}">
                 <Grid>
-                    <Label Content="地址" Style="{DynamicResource Label}" Margin="10,10,684,341"/>
-                    <TextBox Name="IP" TextWrapping="Wrap" Margin="55,10,519,341" Style="{DynamicResource TextBox}" FontSize="16"/>
+                    <Label Content="地址" Style="{DynamicResource Label}" Margin="10,10,686,341"/>
+                    <TextBox Name="IP" TextWrapping="Wrap" Margin="57,13,519,344" FontSize="16"
+                             Text="{Binding 链接.地址}"/>
                     <Button x:Name="Local" Content="本地用" Margin="10,45,644,311" IsDefault="True" Style="{DynamicResource Button}"
                             FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click_1"/>
-                    <Button x:Name="Out" Content="映射用" Margin="95,45,559,311" IsDefault="True" Style="{DynamicResource Button}"
+                    <Button x:Name="Out" Content="映射用" Margin="99,45,555,311" IsDefault="True" Style="{DynamicResource Button}"
                             FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click_3"/>
-                    <Label Content="端口" Style="{DynamicResource Label}" Margin="10,75,684,276"/>
-                    <TextBox x:Name="Port" TextWrapping="Wrap" Margin="55,75,519,276" Style="{DynamicResource TextBox}" FontSize="16"/>
+                    <Label Content="端口" Style="{DynamicResource Label}" Margin="10,75,686,276"/>
+                    <TextBox x:Name="Port" TextWrapping="Wrap" Margin="57,78,519,279" FontSize="16"
+                             Text="{Binding 链接.端口}"/>
                     <Button x:Name="SocketRE" Content="重启端口" Margin="10,346,644,10" IsDefault="True" Style="{DynamicResource Button}"
-                        FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click_2"/>
-                    <Label Content="状态：" Style="{DynamicResource Label}" Margin="10,110,672,241"/>
-                    <Label Name="State" Content="未知" Style="{DynamicResource Label}" Margin="62,110,519,241"/>
-                    <ListView Margin="220,10,10,10" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
+                            FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click_2"/>
+                    <Label Content="状态：" Style="{DynamicResource Label}" Margin="11,198,674,153"/>
+                    <Label Name="State" Content="未知" Style="{DynamicResource Label}" Margin="64,198,517,153"/>
+                    <RadioButton Content="ANSI" Margin="10,108,621,249" Style="{DynamicResource RadioButton_Left}" 
+                                 IsChecked="True" Name="ANSIC" Click="C_Click"/>
+                    <RadioButton Content="UTF-8" Margin="112,108,519,249" Style="{DynamicResource RadioButton_Right}" 
+                                 IsChecked="False" Name="UTF8C" Click="C_Click"/>
+                    <Button x:Name="SocketST" Content="关闭端口" Margin="99,346,555,10" IsDefault="True" Style="{DynamicResource Button}"
+                            FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="SocketST_Click"/>
+                    <Label Content="数据头" Style="{DynamicResource Label}" Margin="10,132,669,219"/>
+                    <TextBox x:Name="Head" TextWrapping="Wrap" Margin="74,135,518,222" FontSize="16"
+                             Text="{Binding 链接.数据头}"/>
+                    <Label Content="数据尾" Style="{DynamicResource Label}" Margin="11,165,669,186"/>
+                    <TextBox x:Name="End" TextWrapping="Wrap" Margin="74,168,518,189" FontSize="16"
+                             Text="{Binding 链接.数据尾}"/>
+                    <ListView Margin="224,10,10,10" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
                               Name="ServerList">
                         <ListView.View>
                             <GridView>
@@ -74,17 +90,150 @@
                             </ContextMenu>
                         </ListView.ContextMenu>
                     </ListView>
-                    <Button x:Name="SocketST" Content="关闭端口" Margin="95,346,559,10" IsDefault="True" Style="{DynamicResource Button}"
-                        FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="SocketST_Click"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="指令设置" Background="Transparent" Style="{DynamicResource TabItem}">
+            <TabItem Header="插件配置" Background="Transparent" Style="{DynamicResource TabItem}">
                 <Grid>
-
+                    <GroupBox Header="检测设置" Margin="10,10,487,183" Foreground="White" BorderBrush="White">
+                        <Grid>
+                            <Label Content="检测头" Style="{DynamicResource Label}" Margin="10,3,169,123"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,7,10,0" FontSize="16"
+                                     Text="{Binding 检测.检测头}" Height="22" VerticalAlignment="Top"/>
+                            <Label Content="在线人数" Style="{DynamicResource Label}" Margin="1,34,162,92"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,38,10,0" FontSize="16"
+                                     Text="{Binding 检测.在线玩家获取}" Height="22" VerticalAlignment="Top"/>
+                            <Label Content="在线状态" Style="{DynamicResource Label}" Margin="1,65,162,62"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,69,10,0" FontSize="16"
+                                     Text="{Binding 检测.服务器在线检测}" Height="22" VerticalAlignment="Top"/>
+                            <Label Content="绑定名字" Style="{DynamicResource Label}" Margin="1,96,162,31"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,99,10,0" FontSize="16"
+                                     Text="{Binding 检测.玩家设置名字}" Height="22" VerticalAlignment="Top"/>
+                            <Label Content="发送消息" Style="{DynamicResource Label}" Margin="1,126,162,1"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,129,10,0" FontSize="16"
+                                     Text="{Binding 检测.发送消息至服务器}" Height="22" VerticalAlignment="Top"/>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="管理指令" Margin="249,10,248,10" Foreground="White" BorderBrush="White">
+                        <Grid>
+                            <Label Content="禁言" Style="{DynamicResource Label}" Margin="17,3,178,296"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,7,10,300" FontSize="16"
+                                     Text="{Binding 管理员.禁言}"/>
+                            <Label Content="取消禁言" Style="{DynamicResource Label}" Margin="1,34,162,265"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,38,10,269" FontSize="16"
+                                     Text="{Binding 管理员.取消禁言}"/>
+                            <Label Content="查询名字" Style="{DynamicResource Label}" Margin="1,65,162,235"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,69,10,238" FontSize="16"
+                                     Text="{Binding 管理员.查询绑定名字}"/>
+                            <Label Content="重命名" Style="{DynamicResource Label}" Margin="9,96,170,204"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,99,10,208" FontSize="16"
+                                     Text="{Binding 管理员.重命名}"/>
+                            <Label Content="维护切换" Style="{DynamicResource Label}" Margin="1,126,162,174"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,129,10,178" FontSize="16"
+                                     Text="{Binding 管理员.维护模式切换}"/>
+                            <Label Content="重读配置" Style="{DynamicResource Label}" Margin="1,156,162,144"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,159,10,148" FontSize="16"
+                                     Text="{Binding 管理员.重读配置}"/>
+                            <Label Content="打开菜单" Style="{DynamicResource Label}" Margin="1,186,162,114"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,189,10,118" FontSize="16"
+                                     Text="{Binding 管理员.打开菜单}"/>
+                            <Label Content="设置昵称" Style="{DynamicResource Label}" Margin="1,216,162,84"/>
+                            <TextBox TextWrapping="Wrap" Margin="75,219,10,88" FontSize="16"
+                                     Text="{Binding 管理员.设置昵称}"/>
+                            <Label Content="发送QQ号" Style="{DynamicResource Label}" Margin="1,246,152,54"/>
+                            <TextBox TextWrapping="Wrap" Margin="10,275,75,32" FontSize="16"
+                                     Text="{Binding 管理员.发送绑定信息QQ号}"/>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="提示文本" Margin="488,10,9,10" Foreground="White" BorderBrush="White">
+                        <Grid>
+                            <Label Content="维护提示文本" Style="{DynamicResource Label}" Margin="10,3,120,297"/>
+                            <TextBox TextWrapping="Wrap" Margin="10,37,10,222" FontSize="16"
+                                     Text="{Binding 消息.维护提示文本}" AcceptsReturn="True"/>
+                            <Label Content="未知指令文本" Style="{DynamicResource Label}" Margin="10,112,120,188"/>
+                            <TextBox TextWrapping="Wrap" Margin="10,146,10,113" FontSize="16"
+                                Text="{Binding 消息.未知指令文本}" AcceptsReturn="True"/>
+                            <Label Content="不能绑定文本" Style="{DynamicResource Label}" Margin="10,221,120,79"/>
+                            <TextBox TextWrapping="Wrap" Margin="10,255,10,4" FontSize="16"
+                                Text="{Binding 消息.不能绑定文本}" AcceptsReturn="True"/>
+                        </Grid>
+                    </GroupBox>
+                    <GroupBox Header="选择设置" Margin="10,194,487,10" Foreground="White" BorderBrush="White">
+                        <Grid>
+                            <CheckBox Content="自动应答"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="2,4,153,122"
+                                      IsChecked="{Binding 设置.自动应答开关}"/>
+                            <CheckBox Content="颜色代码"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="2,28,153,98"
+                                      IsChecked="{Binding 设置.颜色代码开关}"/>
+                            <CheckBox Content="维护模式"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="2,52,153,74"
+                                      IsChecked="{Binding 设置.维护模式}"/>
+                            <CheckBox Content="始终发送消息"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="2,76,153,50"
+                                      IsChecked="{Binding 设置.始终发送消息}"/>
+                            <CheckBox Content="昵称发送至服务器"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="89,4,0,122"
+                                      IsChecked="{Binding 设置.使用昵称发送至服务器}"/>
+                            <CheckBox Content="昵称发送至群"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="89,28,0,98"
+                                      IsChecked="{Binding 设置.使用昵称发送至群}"/>
+                            <CheckBox Content="可以绑定名字"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="89,52,0,74"
+                                      IsChecked="{Binding 设置.可以绑定名字}"/>
+                            <CheckBox Content="发送日志到主群"
+                                      Style="{DynamicResource Check}" FontSize="16" Foreground="White" Margin="89,76,0,50"
+                                      IsChecked="{Binding 设置.发送日志到主群}"/>
+                            <Label Content="发送消息间隔" Style="{DynamicResource Label}" Margin="2,100,130,16"/>
+                            <TextBox TextWrapping="Wrap" Margin="107,103,10,0" FontSize="16"
+                                     Text="{Binding 设置.发送群消息间隔}" Height="22" VerticalAlignment="Top"/>
+                        </Grid>
+                    </GroupBox>
                 </Grid>
             </TabItem>
             <TabItem Header="玩家管理" Background="Transparent" Style="{DynamicResource TabItem}">
                 <Grid>
+                    <ListView Margin="10,10,175,10" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
+                        x:Name="PlayerList">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="QQ号" Width="150" DisplayMemberBinding="{Binding 名字}"/>
+                                <GridViewColumn Header="玩家名字" Width="150" DisplayMemberBinding="{Binding 昵称}"/>
+                                <GridViewColumn Header="昵称" Width="150" DisplayMemberBinding="{Binding QQ号}"/>
+                                <GridViewColumn Header="管理员" Width="90" DisplayMemberBinding="{Binding 管理员}"/>
+                            </GridView>
+                        </ListView.View>
+                        <ListView.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="断开连接" Click="ScoketD"/>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
+                    </ListView>
+                    <ListView Margin="568,10,10,190" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
+                        x:Name="NoIDList">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="禁止绑定" Width="150" DisplayMemberBinding="{Binding StringFormat=string}"/>
+                            </GridView>
+                        </ListView.View>
+                        <ListView.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="断开连接" Click="ScoketD"/>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
+                    </ListView>
+                    <ListView Margin="568,194,10,10" Background="#22FFFFFF" Style="{DynamicResource ListViewStyle1}"
+                        x:Name="MuteList">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="禁言" Width="150" DisplayMemberBinding="{Binding StringFormat=string}"/>
+                            </GridView>
+                        </ListView.View>
+                        <ListView.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="断开连接" Click="ScoketD"/>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
+                    </ListView>
 
                 </Grid>
             </TabItem>
@@ -98,10 +247,16 @@
 
                 </Grid>
             </TabItem>
+            <TabItem Header="数据库" Background="Transparent" Style="{DynamicResource TabItem}">
+                <Grid>
+
+                </Grid>
+            </TabItem>
         </TabControl>
-        <Button Content="保存" Margin="660,5,10,391" IsDefault="True" Style="{DynamicResource Button}"
-                    FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Click"/>
-        <Button Content="重载" Margin="585,5,85,391" IsDefault="True" Style="{DynamicResource Button}"
-                    FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click"/>
+        <Button Content="保存" Margin="674,5,10,391" IsDefault="True" Style="{DynamicResource Button}"
+                FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Click"/>
+        <Button Content="重载" Margin="609,5,75,391" IsDefault="True" Style="{DynamicResource Button}"
+                FontSize="16" Foreground="White" RenderTransformOrigin="0.5,0.5" Click="Button_Click"/>
+
     </Grid>
 </Window>
