--- a/Minecraft_QQ/SetWindow/QQSet.xaml
+++ b/Minecraft_QQ/SetWindow/QQSet.xaml
@@ -4,11 +4,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="QQSet" Height="90" Width="220" ResizeMode="NoResize" Background="White">
+        Title="QQ群设置" Height="90" Width="220" ResizeMode="NoResize" Background="White" Icon="/Minecraft_QQ;component/img/icon.ico">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Style/Button.xaml"/>
                 <ResourceDictionary Source="Style/Label.xaml"/>
                 <ResourceDictionary Source="Style/TextBox.xaml"/>
                 <ResourceDictionary Source="Style/CheckBox.xaml"/>
@@ -16,16 +15,14 @@
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
-        <Label Content="群号" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" 
+        <Label Content="群号" Margin="10,6,170,30" 
                Style="{DynamicResource Label}" Foreground="Black" Background="#00898989"/>
-        <TextBox Margin="44,10,10,0" Height="20" TextWrapping="Wrap" Text="{Binding Obj.群号}" 
-                 VerticalAlignment="Top"
-                 Style="{DynamicResource TextBox}" Foreground="Black" Background="#225EBDD3"/>
-        <CheckBox Content="主群" HorizontalAlignment="Left" Margin="150,35,0,0" VerticalAlignment="Top"
+        <TextBox Margin="44,8,10,33" TextWrapping="Wrap" Text="{Binding Obj.群号}" Foreground="Black" Background="#225EBDD3"/>
+        <CheckBox Content="主群" Margin="150,35,26,12"
                   Style="{DynamicResource Check}" IsChecked="{Binding Obj.主群}"/>
-        <CheckBox Content="启用命令" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"
+        <CheckBox Content="启用命令" Margin="10,35,142,12"
             Style="{DynamicResource Check}" IsChecked="{Binding Obj.启用命令}"/>
-        <CheckBox Content="开启对话" HorizontalAlignment="Left" Margin="80,35,0,0" VerticalAlignment="Top"
+        <CheckBox Content="开启对话" Margin="80,35,72,12"
             Style="{DynamicResource Check}" IsChecked="{Binding Obj.开启对话}"/>
 
     </Grid>
